# NDSPoi

./: .gitignore
cuttxt/src/: cuttxt.cpp
sqlexec/: CMakeLists.txt  readme
sqlexec/include/: sqlexec.h  sqlexec_define.h
sqlexec/sqlexec/: cursor.h  sqlexec.cc  sqlitedb.cc  sqlitedb.h  sqlquery.cc  sqlquery.h
sqlexec/test/: sqlexec-test.cpp
sqlexecrest/: application.py  start.sh
sqlexecrest/sqlrest/: __init__.py  default_settings.py  poi_search.py
sqlexecrest/sqlrest/templates/: index.html
